<resources>
    <string name="app_name">TourApp</string>
    <string name="strTitleFirst" translatable="false">TourApp</string>
    <string name="strDescriptionFirst">Vuoi buoni sconto e guide dettagliate? Registrati su TourApp!</string>
    <string name="titoloHome">Pagina Principale</string>
    <string name="titoloDiario">Diario Personale</string>
    <string name="coupon">Nuovo Coupon</string>
    <string name="NFCInstructions">Avvicina il tuo telefono al tag NFC per ricevere un coupon! Assicurati che il sensore NFC sia abilitato!</string>
    <string name="btnCoupon">Salva Coupon</string>
    <string name="loading">Caricamento in corso...</string>

    <string name="homeEsplora">Esplora</string>

    <string name="homeDiario">Il mio diario</string>
    <string name="homeCoupon">I miei coupon</string>
    <string name="esploraInteressi">Interessi</string>

    <string name="esploraMangiare">Dove mangiare</string>
    <string name="esploraDormire">Dove dormire</string>
    <string name="mangiareGelaterie" translatable="false">Gelaterie</string>


    <string name="mangiareRistoranti">Ristoranti</string>
    <string name="mangiarePizzerie" translatable="false">Pizzerie</string>
    <string name="dormireHotel" translatable="false">Hotel</string>

    <string name="dormireBB" translatable="false">B and B</string>
    <string name="interessiFamiglie">Svago per famiglie</string>

    <string name="interessiGiovani">Locali e discoteche</string>
    <string name="interessiLidi">Lidi</string>
    <string name="interessiMusei">Musei</string>
    <string name="interessiMonumenti">Monumenti</string>
    <string name="interessiChiese">Chiese</string>
    <string name="hotelNicolaus" translatable="false">Nicolaus Hotel</string>

    <string name="hotelNicolausVia">Via Ciasca, 27, 70124, Bari, Italia</string>
    <string name="hotelNicolausCosto" translatable="false">$$$$</string>
    <string name="title_monument_list">Monumenti</string>
    <string name="title_monument_detail">Dettagli a riguardo</string>
    <string name="navigation_drawer_open">Apri Menu Laterale </string>
    <string name="navigation_drawer_closed">Chiudi Menu Laterale </string>
    <string name="title_gelateria_list" translatable="false">Gelaterie</string>
    <string name="title_gelateria_detail">Dettagli Gelateria</string>
    <string name="title_restaurant_list">Ristoranti</string>
    <string name="title_restaurant_detail">Dettagli Ristorante</string>
    <string name="title_pizzeria_list">Pizzerie</string>
    <string name="title_pizzeria_detail">Dettagli Pizzeria</string>
    <string name="title_museo_list">Musei</string>
    <string name="title_museo_detail">Dettagli Museo</string>
    <string name="title_chiesa_list">Chiese</string>
    <string name="title_chiesa_detail">Dettagli Chiesa</string>
    <string name="title_spiaggia_list">Spiagge</string>
    <string name="title_spiaggia_detail">Dettaglio Spiaggia</string>
    <string name="title_svagofamiglia_list">Svaghi per la Famiglia</string>
    <string name="title_svagofamiglia_detail">Dettagli dello svago</string>
    <string name="title_svagogiovani_list">Svaghi per i Giovani</string>
    <string name="title_svagogiovani_detail">Dettagli sullo svago</string>
    <string name="title_albergo_list">Alberghi</string>
    <string name="title_albergo_detail">Dettaglio Albergo</string>
    <string name="title_beb_list">B e B</string>
    <string name="title_beb_detail">Dettaglio BeB </string>
    <string name="textLoginInfoPoint">Info Point? Clicca qui</string>

    <string name="logout" translatable="false">Logout</string>
    <string name="aggiungi">Aggiungi</string>

    <string name="elimina">Elimina</string>
    <string name="modifica">Modifica</string>
    <string name="title_diario_list">Diari</string>
    <string name="title_diario_detail">Dettaglio Ricordo</string>
    <string name="title_coupon_list" translatable="false">Coupons</string>
    <string name="title_coupon_detail" translatable="false">Coupon Detail</string>
    <string name="titoloDialogElimina">Elemento eliminato</string>
    <string name="messaggioDialogElimina">Eliminazione avvenuta con successo</string>
    <string name="positiveButton" translatable="false">OK</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="signup">Registrati</string>
    <string name="newAccount"> Non hai un account? Registrati</string>

    <string name="usaCoupon">Usa Coupon</string>
<string name="descrizioneCoupon">In questa pagina potrai sapere quanti coupon hai accumulato. Clicca su \"Usa un coupon\" per usufruirne oppure aggiungi un coupon cliccando sul tasto +. </string>
    <string name="titoloDialogCoupon">Coupon utilizzato</string>
    <string name="messaggioDialogCoupon">Mostra il coupon al negoziante prima di premere OK.</string>
    <string name="codiceCoupon">codice</string>

    <plurals name="couponsCount">
       <item quantity="zero">Hai %d coupon</item>
       <item quantity="one">Hai %d coupon</item>
       <item quantity="other">Hai %d coupon</item>
   </plurals>
    <string name="singUpToLogin">Hai un account? Fai l\'accesso</string>
    <string name="mail" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="ilTuoCoupon">Il tuo coupon è:</string>
    <string name="tornaIndietro"> Il codice che vedi è stato memorizzato, puoi tornare alla schermata precedente.</string>
    <string name="tutorialDescrizioneEsplora">Non sai dove dormire, dove mangiare o cosa visitare? TourApp ti mostrerà le principali attrazioni, i migliori ristoranti e i più comodi hotel.</string>
    <string name="tutorialCoupon">Coupon</string>
    <string name="tutorialDiario">Diario di Viaggio</string>
    <string name="tutorialEsplora">Esplora il mondo attorno a te</string>
    <string name="tutorialDescrizioneDiario">Metti in pausa il tempo con i tuoi diari! Scatta  foto e commentale per rivivere i momenti più belli del tuo viaggio.</string>
    <string name="tutorialDescrizioneCoupon">Viaggiare non è mai stato così conveniente! Registra i coupon presso l\'InfoPoint della città e spendili nei centri convenzionati!</string>
    <string name="pref_previously_started" />
    <string name="lunghezzaMinima">La password deve contentere almeno 6 caratteri</string>
    <string name="inserirePsw">Inserire password</string>
    <string name="mailDiversa">Inserire una mail valida</string>
    <string name="erroreMail">Inserire la mail</string>

</resources>