<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="20dp"

        >

        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/infoAggiungi"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout

                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackround1"
                    android:src="@drawable/ic_aggiungi_24dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aggiungi"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="20dp"
        >

        <android.support.v7.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/infoModifica"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout

                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackroundpink"
                    android:src="@drawable/ic_modifica_24dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifica"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="20dp"
        >

        <android.support.v7.widget.CardView
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:id="@+id/infoElimina"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout

                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackroundorange"
                    android:src="@drawable/ic_cancella_black_24dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/Orange"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elimina"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
