<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    app:statusBarBackground="@color/colorPrimaryDark"
    tools:context=".ExploreActivity"
    >

    <LinearLayout

        android:id="@+id/fragmentExplore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_hamburger" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp"

                >

                <android.support.v7.widget.CardView
                    android:id="@+id/interessiMonumenti"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circlebackroundlightblue"
                            android:src="@drawable/ic_monumento" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/Cornflower" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interessiMonumenti"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:padding="5dp"/>


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/interessiMusei"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circlebackroundauchico"
                            android:src="@drawable/ic_museum" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/AuChico" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interessiMusei"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:padding="5dp"/>


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/interessiChiese"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circlebackroundviolet"
                            android:src="@drawable/ic_cross" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/LightViolet"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interessiChiese"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:padding="5dp"/>


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/interessiLidi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circlebackroundorange"
                            android:src="@drawable/ic_beach" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/Orange" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interessiLidi"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:padding="5dp"/>


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/interessiGiovani"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circlebackroundyellow"
                            android:src="@drawable/ic_divertimento" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/FireBush" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interessiGiovani"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:gravity="center"/>


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/interessiFamiglie"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="32dp"
                            android:background="@drawable/circlebackroundlightblue"
                            android:src="@drawable/ic_familyone" />

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="32dp"
                            android:background="@drawable/circlebackroundlightblue"
                            android:src="@drawable/ic_familytwo" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/Cornflower" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interessiFamiglie"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:gravity="center"/>


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu" />

</android.support.v4.widget.DrawerLayout>