<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".ExploreActivity"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentExplore"
        android:orientation="vertical"
        >
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/cardview_light_background"
            app:navigationIcon="@drawable/ic_menu_hamburger"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="20dp"
            >


            <android.support.v7.widget.CardView
                android:foreground="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/esploraInteressi"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout

                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackroundyellow"
                        android:src="@drawable/ic_palette_black_24dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/FireBush"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/esploraInteressi"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="20dp"
            >

            <android.support.v7.widget.CardView
                android:foreground="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/esploraMangiare"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout

                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackroundviolet"
                        android:src="@drawable/ic_restaurant_black_24dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/LightViolet"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/esploraMangiare"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="20dp"
            >

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:id="@+id/esploraDormire"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout

                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackroundlightblue"
                        android:src="@drawable/ic_bed" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/Cornflower"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/esploraDormire"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity = "start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu"/>



</android.support.v4.widget.DrawerLayout>